--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -64,11 +64,11 @@ covid_clean <- covid_data_initial %>%
           dob = ymd(dob),
           age = round(age_calc(dob, units = "years"), digits = 1),
           age_group = cut(age, breaks = c(0, 10, 20, 30, 40, 50, 60, 70, 80, 110),
-                          labels = c("0-9, 0.1", "10-19, 0.12", "20-29, 0.19", 
-                                     "30-39, 0.14", "40-49, 0.12", "50-59, 0.11", 
-                                     "60-69, 0.11", "70-79, 0.07", "80+, 0.03"), right = FALSE),
+                          labels = c("0 to 9, 0.1", "10 to 19, 0.12", "20 to 29, 0.19", 
+                                     "30 to 39, 0.14", "40 to 49, 0.12", "50 to 59, 0.11", 
+                                     "60 to 69, 0.11", "70 to 79, 0.07", "80+, 0.03"), right = FALSE),
           age_group2 = cut(age, breaks = c(0, 18, 65, 110),
-                          labels = c("<18", "18-64", "65+"), right = FALSE)) %>% 
+                          labels = c("<18", "18 to 64", "65+"), right = FALSE)) %>% 
    separate(age_group, c("age_group", "age_group_percent"), sep = ", ") %>% 
    mutate(age_group_percent = as.numeric(age_group_percent),
           county_pop = as.numeric(119000)) %>% 
