--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montanta"
-date: "Data as of May 14, 2020"
+date: "Data as of May 15, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -528,7 +528,7 @@ covid_plot <- covid_data %>%
                                        "Taste/Smell Loss"))) %>% 
    ggplot(aes(x = variable, y = values, fill = gender)) +   
      geom_bar(stat = "identity", width = .6) +   
-     labs(title = "Cases with symptoms, by gender", y = "Count", x = "", fill = "") +
+     labs(title = "Symptoms reported at time of testing", y = "Count", x = "", fill = "") +
      scale_y_continuous(breaks = c(seq(0, 50, 2)), labels = c(seq(0, 50, 2))) +
      coord_flip() +
      theme_minimal() +
