--- a/montana_covid_data.Rmd
+++ b/montana_covid_data.Rmd
@@ -988,6 +988,13 @@ county_data <- as.data.frame(json_data$features$attributes)
 serial_interval_mean <- 4
 serial_interval_sd <- 4.75
 
+#serial_interval_mean <- 4
+#serial_interval_sd <- 6
+
+# When experimenting with different serial interval mean/sd, the mean has an impact,
+# but SD perhaps has more of an impact. Lower SD makes R go up - more certainty.
+# Higher mean also makes R go up.
+
 
 ## State results
 state_incidence <- incidence(state_data_clean$dates)
@@ -1007,7 +1014,7 @@ state_results2wk <- estimate_R(state_incidence, method="parametric_si",
                                                          std_si = serial_interval_sd,
                                                          t_start =  time_start,
                                                          t_end = time_end)))
-estimate_R_plots(state_results2wk, what = "R")
+#estimate_R_plots(state_results2wk, what = "R")
 
 # Rolling 1 week R
 colomns <- c(1:4, 8)
@@ -1049,7 +1056,7 @@ state_r_plot <- state_r_clean %>%
      xlab("") +
      geom_hline(yintercept = 1, color = "black", size = 1.2) +
      scale_x_date(date_breaks = "2 days", date_labels = "%d-%b") +
-     scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
+     #scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 12, colour = "black"),
@@ -1108,7 +1115,7 @@ state_r_plot <- state_r_clean %>%
      xlab("") +
      geom_hline(yintercept = 1, color = "black", size = 1.2) +
      scale_x_date(date_breaks = "2 days", date_labels = "%d-%b") +
-     scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
+     #scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
            title = element_text(size = 12, colour = "black"),
