--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montanta"
-date: "Data as of May 15, 2020"
+date: "Data as of May 28, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -248,7 +248,9 @@ kable(covid_summary, caption = "Missoula County COVID-19 Cases",
 \clearpage  
 
 ```{r, eval=TRUE, include=FALSE}
-covid_incidence <- incidence(covid_data$symptom_onset_date_new)
+current_date <- format(Sys.Date(), "%Y-%m-%d")
+
+covid_incidence <- incidence(covid_data$symptom_onset_date_new, last_date = current_date)
 
 serial_interval_mean <- 4
 serial_interval_sd <- 4.75
@@ -262,9 +264,16 @@ fit_results <- incidence::fit(covid_incidence)
 
 #doubling_time <- round(fit_results$info$doubling)
 
+county_n <- as.data.frame(covid_incidence$dates)
+time_var <- nrow(county_n)
+time_start <- seq(2, time_var-13)
+time_end <- time_start + 13
+
 estimate_results <- estimate_R(covid_incidence, method="parametric_si", 
                                config = make_config(list(mean_si = serial_interval_mean, 
-                                                         std_si = serial_interval_sd)))
+                                                         std_si = serial_interval_sd,
+                                                      t_start =  time_start,
+                                                      t_end = time_end)))
 
 colomns <- c(1:4, 8)
 county_r <- (estimate_results$R[,colomns]) %>% 
@@ -275,11 +284,16 @@ county_r <- (estimate_results$R[,colomns]) %>%
 
 county_dates <- as.data.frame(estimate_results$dates)
 county_i <- as.data.frame(estimate_results$I)
+county_cil <- as.data.frame(estimate_results$R$`Quantile.0.025(R)`)
+county_cih <- as.data.frame(estimate_results$R$`Quantile.0.975(R)`)
 county_dates_new <- cbind(county_dates, county_i) %>% 
    rename(dates = 1,
           incidence = 2) %>% 
    mutate(dates = ymd(dates))
-county_dates_new <- county_dates_new[-(1:7), 1:2]
+county_dates_new <- county_dates_new[-(1:14), 1:2]
+county_dates_new <- cbind(county_dates_new, county_cil, county_cih) %>% 
+   rename(cl_low = 3,
+          cl_high = 4)
 county_r_clean <- cbind(county_r, county_dates_new)
    
 
@@ -296,21 +310,23 @@ plot(r_results)
 
 \pagebreak  
 
-```{r, fig.width = 10, fig.height = 6}
+```{r, fig.width = 10, fig.height = 6, include=FALSE}
 total_cases <- sum(covid_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
 date_12 <- format(Sys.Date() - 12, "%d %b %Y")
 
 covid_plot_r <- county_r_clean %>% 
    ggplot() +
+     geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
+     geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
+     geom_line(aes(dates, cl_high), size = 1.5, color = "grey") +
      geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray85", alpha = 0.05) +
-     geom_label(aes(x = Sys.Date()-7, y = 2.5, 
+     geom_label(aes(x = Sys.Date()-7, y = 15, 
                     label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
-     geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
      labs(title = "COVID-19 R-value in Missoula County, 2020",
           subtitle = paste0("Total cases = ", total_cases)) +
-     ylab("Rolling 7-day mean R-value") +
+     ylab("Rolling 14-day mean R-value") +
      xlab(" ") +
      scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
                                     to = as.Date(Sys.Date()), 
@@ -319,7 +335,7 @@ covid_plot_r <- county_r_clean %>%
                                     to = as.Date(Sys.Date()), 
                                     by = "1 day"),
                   date_labels = "%d-%b") +
-     scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
+     #scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
      geom_hline(yintercept = 1, size = 1.2, color = "black") +
      theme_minimal() +
      theme(strip.text = element_text(size = 16, colour = "black"),
@@ -354,7 +370,7 @@ covid_plot_onset <- covid_data %>%
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
-     geom_label(aes(x = Sys.Date()-7, y = 4.5, 
+     geom_label(aes(x = Sys.Date()-8, y = 4.5, 
                     label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_col(aes(symptom_onset_date_new, case, fill = symptom_onset_date_indicator)) +
      labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
@@ -393,7 +409,15 @@ covid_plot_onset <- covid_data %>%
                  y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-03-28")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-03-28"), label = "Stay at home order", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-03-28"), label = "Shelter in place order", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-04-26")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 start", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 start", vjust = -0.5,
                  y = 3.5), colour = "black", angle = 90, text = element_text(size=14))
 
 covid_plot_onset
@@ -408,7 +432,7 @@ covid_plot_onset <- covid_data %>%
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
-     geom_label(aes(x = Sys.Date()-8, y = 4.5, 
+     geom_label(aes(x = Sys.Date()-9, y = 4.5, 
                     label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_col(aes(symptom_onset_date_new, case, fill = age_group)) +
      labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
@@ -446,7 +470,15 @@ covid_plot_onset <- covid_data %>%
                  y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-03-28")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-03-28"), label = "Stay at home order", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-03-28"), label = "Shelter in place order", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-04-26")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 start", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 start", vjust = -0.5,
                  y = 3.5), colour = "black", angle = 90, text = element_text(size=14))
 
 covid_plot_onset
@@ -461,7 +493,7 @@ covid_plot_onset <- covid_data %>%
    ggplot() +
      geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
                fill = "gray80", alpha = 0.05) +
-     geom_label(aes(x = Sys.Date()-7, y = 4.5, 
+     geom_label(aes(x = Sys.Date()-8, y = 4.5, 
                     label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
      geom_col(aes(symptom_onset_date_new, case, fill = gender)) +
      labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
@@ -500,7 +532,15 @@ covid_plot_onset <- covid_data %>%
                  y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-03-28")), color = "black", 
               size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-03-28"), label = "Stay at home order", vjust = -0.5,
+     geom_text(aes(x = as.Date("2020-03-28"), label = "Shelter in place order", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-04-26")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 start", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 start", vjust = -0.5,
                  y = 3.5), colour = "black", angle = 90, text = element_text(size=14))
 
 covid_plot_onset
